--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=5.4.0"
     },
     "autoload": {
-        "psr-4": { "Uptime\\": "src/" }
+        "psr-4": { "Uptime\\": "src/" },
+        "files": ["__functions.php"]
     }
 }
