--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ php:
   - hhvm
   - hhvm-nightly
 
+matrix:
+  allow_failures:
+    - php: hhvm-nightly
+
 before_script:
   - composer self-update
   - composer require satooshi/php-coveralls:dev-master --no-update --dev
