--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "mockery/mockery": "~0.9"
+        "mockery/mockery": "~0.9",
+        "phpunit/phpunit": "~5.3"
     },
     "autoload": {
         "psr-4": { "Uptime\\": "src/" },
