--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 
 before_script:
   - composer self-update
-  - composer require satooshi/php-coveralls:dev-master --no-update --dev
+  - composer require satooshi/php-coveralls:~1.0 --no-update --dev
   - composer install --dev --prefer-source
 
 after_script:
